# olist-event-pipeline

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
pipeline/batch/: extract.py  load.py  transform.py  validate.py
pipeline/serving/: mongo_to_postgres.py
pipeline/stream/: consumer.py  producer.py
