[project]
name = "olist-event-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.3.0",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.16.0",
    "pyspark==3.5.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
